# TOPSIS

./: .gitignore  README.md  pyproject.toml  test_topsis.py
examples/: run_topsis.py  sample.csv
topsis/: Ideal_Solution.py  Normalized_Decision_Matrix.py
topsis-python/src/topsis/: Distance_Between_Ideal_and_Alternatives.py  Normalized_Decision_Matrix.py  Weighted_Normalized_Decision_Matrix.py  main.py  test_topsis.py
topsis_hamedbaziyad/src/topsis_hamedbaziyad/: Distance_Between_Ideal_and_Alternatives.py  Ideal_Solution.py  Normalization.py  Normalized_Decision_Matrix.py  Weighted_Normalized_Decision_Matrix.py  __init__.py  main.py  test_topsis.py
