[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "topsis-python"
version = "0.0.1"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "A simple TOPSIS implementation"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
    "openpyxl",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.setuptools.packages.find]
where = ["topsis-python/src"]